# RAG-1

./: .gitignore  pyproject.toml
src/rag_1/: __init__.py
src/rag_1/first_demo/: gemini_simple.py  rag_simple.py
src/rag_1/get_news/: serpapi_api.py  serpapi_news_results.txt
src/rag_1/rag_example_0/: gemini_search_real_time.py  rag_simple.py
src/rag_1/rag_example_1/: 0_preview_data.py  1_data_loader.py  2_query_milvus.py  3_test_retrival.py  L2_result.txt  README.md  check_milvus_data.py  data_loader.py  query_milvus.py
src/rag_1/rag_example_2/: 1_embedding.py  2_chunk_preview.py  README.md  faiss_index.index  text_chunks.pkl
tests/: test_milvuls_normalization.py
