[project]
name = "rag-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Chandler TA",email = "tanguyenthanhlong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai (>=0.8.5,<0.9.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "rag_1", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
fixable = ["ALL"]  # Optional, enables fix mode for all selected rules
